# ruclifs

./: Cargo.toml  README.md
.github/workflows/: lint_and_test.yml
src/: main.rs
src/functions/: common.rs  mod.rs  rename.rs  sed.rs  tree.rs
src/utils/: cli.rs  file_sys.rs  mod.rs
