[package]
name = "ruclifs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", default-features = false }
clap = { version = "4.0", features = ["derive"] }
regex = { version = "1.10.6" }
glob = { version = "0.3.1" }


[dev-dependencies]
tempfile = { version = "3.13.0" }
